duct-tape fix to horizontal scroll :sob:

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ body {
     scroll-behavior: smooth;
     font-family: 'Phantom Sans', sans-serif;
     font-size: 16px;
+    overflow-x: hidden;
 }
 
 .youmortalscantcontainme {
